[package]
name = "vert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_prototype_lyon = "0.4.0"
bevy-inspector-egui = "0.9"
bevy_egui = "0.12"

[target.'cfg(windows)'.dependencies]
multiinput = "0.1.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
